# C_lib

./: README.md  pyproject.toml  teste.py
c_lib/: __init__.py  core.py
